# ffmpegCode

./: CMakeLists.txt  README.md
src/: main.cpp  simplest_ffmpeg_decoder.cpp  simplest_ffmpeg_player_su.cpp  simplest_video_play_sdl2.cpp  simplest_video_play_sdl2_basic.cpp
